# pm2-web-rust

./: Cargo.toml  README.md  askama.toml
.github/workflows/: release.yml
src/: main.rs  pm2.rs
static/: script.js
