[package]
name = "pm2-web-rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = "0.1.9"
# futures = "0.3.24"
futures-util = { version = "0.3.24", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.6"
askama = { version = "0.11.1", features = ["with-warp"] }
log = "0.4.17"
uuid = { version = "1.1.2", features = [ "v4","fast-rng" ] }
pretty_env_logger = "0.4"
warp = { version = "0.3.2", features = ["websocket"] }
askama_warp = "0.12.0"