[package]
name = "pm2-web-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
futures-util = { version = "0.3.24", default-features = false, features = ["std"] }
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-ws = "0.2.5"
actix-rt = "2.7.0"
askama = "0.11.1"
log = "0.4.17"
uuid = { version = "1.1.2", features = [ "v4","fast-rng" ] }
ctrlc = "3.2.3"